채팅방 리스트 & 채팅방 상세보기 구현

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
 	id 'java'
 }
 
+apply plugin: 'io.spring.dependency-management'
+
 group = 'com.parkhuiwo0'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
@@ -39,4 +41,3 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
-
