--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=false
 spring.freemarker.cache=false
+
+spring.freemarker.template-loader-path=classpath:/templates
+#spring.freemarker.prefix=/ch/
+spring.freemarker.suffix=.ftl
