--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 	implementation 'org.webjars:sockjs-client:1.1.2'
 	implementation 'org.webjars:stomp-websocket:2.3.3-1'
 	implementation 'com.google.code.gson:gson:2.8.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	compile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
